pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: myspace
  name: connecting-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: k3d-test-app-reg:5050/pingpong:112
