pingpong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: myspace
  name: connecting-pods-ing
spec:
  rules:
  - http:
      paths:
      - path: /pong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 80
      - path: /current-status
        pathType: Prefix
        backend:
          service:
            name: hashgen-svc
            port:
              number: 6578
